Changelog
=========

Here you can see the full list of changes between each Cerberus release.

Version 0.9
-----------

Released on June 24 2015.
Codename: 'Mastrolindo'.

- New: 'oneof' rule which provides a list of definitions in which only one
  should validate (C.D. Clark III).
- New: 'noneof' rule which provides a list of definitions that should all not
  validate (C.D. Clark III).
- New: 'anyof' rule accepts a list of definitions and checks that one
  definition validates (C.D. Clark III).
- New: 'allof' rule validates if if all definitions validate (C.D. Clark III).
- New: 'validator.validated' takes a document as argument and returns
  a validated document or 'None' if validation failed (Frank Sachsenheim).
- New: PyPy support (Frank Sachsenheim).
- New: Type coercion (Brett).
- New: Added 'propertyschema' validation rule (Frank Sachsenheim).

- Change: Use 'str.format' in error messages so if someone wants to override
  them does not get an excpetion if arguments are not passed. Closes #105
  (Brett).
- Change: 'keyschema' renamed to 'valueschema', print a deprecation warning
  (Frank Sachsenheim).
- Change: 'type' can also be a list of types (Frank Sachsenheim).

- Fix: useages of 'document' to 'self.document' in '_validate' (Frank
  Sachsenheim).
- Fix: when 'items' is applied to a list, field name is used as key for
  'validator.errors', and offending field indexes are used as keys for field
  errors ({'a_list_of_strings': {1: 'not a string'}}) 'type' can be a list of
  valid types.
- Fix: Ensure that additional `**kwargs` of a subclass persist through
  validation (Frank Sachsenheim).
- Fix: improve failure message when testing against multiple types (Frank
  Sachsenheim).
- Fix: ignore 'keyschema' when not a mapping (Frank Sachsenheim).
- Fix: ignore 'schema' when not a sequence (Frank Sachsenheim).
- Fix: allow_unknown can also be set for nested dicts. Closes #75 (Tobias
  Betz).